# ArchFinn

./: .gitignore  README.md  main.py  out.txt  pyproject.toml  test.afinn
archfinn/core/: engine.py
archfinn_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
